# llm-research

./: .env  .gitignore  Makefile  app.py  config.py  doc1.txt  package-lock.json  pyproject.toml  query_model.sh  requirements.txt  run_server.sh  serve_llm.py  setup_supabase.sh  store_docs.sh  store_document.sh
api/: handlers.py  routes.py  util.py
database/: supabase.py
llm/: ollama.py
models/: enums.py  schema.py
service/: base_inference_service.py  chain_of_thought_service.py  command_execution_service.py  embeddings.py  rag_service.py
supabase/: config.toml
tools/: base.py  chain_of_thought.py  command_execution.py  rag_search.py
