[tool.poetry]
name = "llm-research"
version = "0.1.0"
description = ""
authors = ["Ryan Fritts <ryan.fritts@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
supabase = ">=2.13.0,<3.0.0"
fastapi = ">=0.115.11,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
numpy = ">=2.2.3,<3.0.0"
pydantic = ">=2.10.6,<3.0.0"
ollama = ">=0.4.7,<0.5.0"
aiohttp = ">=3.9.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
black = ">=23.3.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
